--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Simulation of Hodgkin-Huxley model"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="plotly.min.js"></script>
 
     <title>Visual Simulation</title>
   </head>
